Update sample with required dependency

--- a/v2/samples/insights/v1api20230311/v1api20230311_datacollectionrule.yaml
+++ b/v2/samples/insights/v1api20230311/v1api20230311_datacollectionrule.yaml
@@ -25,6 +25,8 @@ spec:
       - name: "logAnalyticsDestination"
         workspaceResourceReference:
           name: aso-sample-workspace
+          group: operationalinsights.azure.com
+          kind: Workspace
   dataFlows:
     - streams:
         - "Microsoft-Perf"
